# gaming-optimizer

./: Cargo.toml  README.md  build.rs
src/: main.rs  ping.rs  sound.rs
src/powershell/: mod.rs
src/registry/: mod.rs  powerplan.rs  set.rs
