[package]
name = "gaming-optimizer"
description = ""
version = "0.0.1"
authors = ["spddl"]
edition = "2018"

[[bin]]
name = "gaming-optimizer"
path = "src/main.rs"

[dependencies]
dialoguer = "0.8.0"
winreg = { version = "0.9", features = ["transactions"] }
winping = "0.10.1"
serde = '^1.0'
serde_json = '^1.0'
powershell_script = "0.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = '^0.3.8', features = [
    'mmdeviceapi',
    'propsys',
    'coml2api',
    'propidl',
    'functiondiscoverykeys_devpkey',
    'wtypes',
    'objbase',
    'endpointvolume',
    'mmsystem',
] }
wio = '^0.2.2'
widestring = '^0.4.2'

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"
